# project_gs_ghost

./: .env.serve  AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile.serve  MODULE_TODO.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
configs/: default.toml
docker/: Dockerfile  docker-compose.yml
launch/: gs_ghost.launch.py
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
reports/: PRODUCTION_CHECKLIST.md
repositories/GHOST/: .gitmodules  README.md  evaluate.py  requirements.txt  train.py  viewer_mano.py
repositories/GHOST/arguments/: __init__.py
repositories/GHOST/gaussian_renderer/: __init__.py
repositories/GHOST/preprocess/: align_prior.py  animate_hand_gaussian.py  combine_masks.py  hamer_video.py  hloc_colmap_sfm.py  internvl.py  optim_scale_transl.py  retrieve_prior.py  run_single_sequence.sh  sam_hand.py  sam_object.py  vggsfm_video.py
repositories/GHOST/scene/: __init__.py  angle_helpers.py  cameras.py  dataset_readers.py  gaussian_model.py  gaussian_model_mano.py  gaussian_model_mano_hybrid.py
repositories/GHOST/scripts/: train_combined.bash  train_object.bash
repositories/GHOST/utils/: camera_utils.py  general_utils.py  graphics_utils.py  image_utils.py  loss_utils.py  metric_utils.py
requirements/: cuda-linux.txt
scripts/: evaluate_rendering.py  install_cuda_linux.sh  package_release.py  run_sequence.py  train_synthetic.py
src/anima_fujin/: __init__.py
src/anima_gs_ghost/: __init__.py  artifacts.py  assets.py  config.py  device.py  layout.py  pipeline.py  preflight.py  reporting.py  serve.py  viewer.py
src/anima_gs_ghost/alignment/: __init__.py  grasp_detection.py  ho_alignment.py  prior_alignment.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0104.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0205.md  PRD-0206.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0304.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0404.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0701.md  PRD-0702.md  PRD-0703.md
tests/: test_alignment.py  test_api_smoke.py  test_config.py  test_eval_metrics.py  test_grasp_alignment.py  test_layout.py  test_losses.py  test_pipeline_runner.py  test_preflight.py  test_preprocess_stages.py  test_prior_retrieval.py  test_rigging.py  test_ros2_contract.py
(+34 files in other folders)
